# object-detection-and-audio-description-for-accessibility

./: .env  .gitignore  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt
image_processing/: image_processor.py
llm/: model_loader.py
prompts/: prompt_templates.py  prompt_templetes.py
static/css/: style.css
static/js/: main.js
static/uploads/: 03-stop-light-red-traffic.avif  ronaldo.avif
templates/: index.html
templetes/: index.html
tests/: test_llm.py  test_tts.py
tts/: color_correction.py  image_preprocessing.py  tts_engine.py
utils/: audio_handler.py  llm_handler.py  logger.py  tts.py  video_handler.py
